[gd_scene load_steps=2 format=3 uid="uid://welcomebackpopup"]

[ext_resource type="Script" path="res://scenes/ui/WelcomeBackPopup.gd" id="1"]

[node name="WelcomeBackPopup" type="AcceptDialog"]
script = ExtResource("1")
title = "Welcome back!"
size = Vector2i(420, 260)
resizable = false

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="Summary" type="Label" parent="VBox"]
text = "Offline summary"

[node name="Resources" type="RichTextLabel" parent="VBox"]
fit_content_height = true
scroll_active = false
text = "Coins: 0\nMana: 0\nEssence: 0"

[node name="Buttons" type="HBoxContainer" parent="VBox"]
separation = 8

[node name="Collect" type="Button" parent="VBox/Buttons"]
text = "Collect"

[node name="CollectAd" type="Button" parent="VBox/Buttons"]
text = "Collect x2 (Ad)"

[node name="CollectGem" type="Button" parent="VBox/Buttons"]
text = "Collect x2 (Gems)"

[node name="NoThanks" type="Button" parent="VBox/Buttons"]
text = "No thanks"

[node name="Note" type="Label" parent="VBox"]
text = "Offline earnings capped; doubles apply to Coins only and are limited to one per day. Choose Collect or No thanks to skip ads."
